Correccion de Formulario

--- a/index.html
+++ b/index.html
@@ -23,40 +23,40 @@
         <input type="text" id="codigoPostalRemitente" name="CodigoPostalRemitente" value="2000" required>
 
         <label for="nombreApellidoDestinatario">Nombre y Apellido Destinatario:</label>
-        <input type="text" id="nombreApellidoDestinatario" name="NombreApellidoDestinatario" value="LUCAS PONZONI" required>
+        <input type="text" id="nombreApellidoDestinatario" name="NombreApellidoDestinatario" value="" required>
 
         <label for="codigoPostalDestinatario">Código Postal Destinatario:</label>
-        <input type="text" id="codigoPostalDestinatario" name="CodigoPostalDestinatario" value="5000" required>
+        <input type="text" id="codigoPostalDestinatario" name="CodigoPostalDestinatario" value="" required>
 
         <label for="calleDestinatario">Calle Destinatario:</label>
-        <input type="text" id="calleDestinatario" name="CalleDestinatario" value="URQUIZA" required>
+        <input type="text" id="calleDestinatario" name="CalleDestinatario" value="" required>
 
         <label for="calleNroDestinatario">Número de Calle Destinatario:</label>
-        <input type="text" id="calleNroDestinatario" name="CalleNroDestinatario" value="1234" required>
+        <input type="text" id="calleNroDestinatario" name="CalleNroDestinatario" value="" required>
 
         <label for="telefonoDestinatario">Teléfono Destinatario:</label>
-        <input type="text" id="telefonoDestinatario" name="TelefonoDestinatario" value="3416292861" required>
+        <input type="text" id="telefonoDestinatario" name="TelefonoDestinatario" value="" required>
 
         <label for="nroRemito">Número de Remito:</label>
-        <input type="text" id="nroRemito" name="NroRemito" value="123456789NOV2" required>
+        <input type="text" id="nroRemito" name="NroRemito" value="" required>
 
         <label for="bultos">Cantidad de Bultos:</label>
         <input type="number" id="bultos" name="Bultos" value="1" required>
 
         <label for="peso">Peso Total (kg):</label>
-        <input type="number" id="peso" name="Peso" step="0.001" value="23" required>
+        <input type="number" id="peso" name="Peso" step="0.001" value="" required>
 
         <label for="valorDeclarado">Valor Declarado:</label>
-        <input type="number" id="valorDeclarado" name="ValorDeclarado" value="25999" required>
+        <input type="number" id="valorDeclarado" name="ValorDeclarado" value="" required>
 
         <label for="alto">Alto (cm):</label>
-        <input type="number" id="alto" name="Alto" step="0.001" value="35" required>
+        <input type="number" id="alto" name="Alto" step="0.001" value="" required>
 
         <label for="ancho">Ancho (cm):</label>
-        <input type="number" id="ancho" name="Ancho" step="0.001" value="25" required>
+        <input type="number" id="ancho" name="Ancho" step="0.001" value="" required>
 
         <label for="largo">Largo (cm):</label>
-        <input type="number" id="largo" name="Largo" step="0.001" value="35" required>
+        <input type="number" id="largo" name="Largo" step="0.001" value="" required>
 
         <input type="number" id="m3" name="M3" step="0.001" value="0.1">
 
