--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         <input type="number" id="m3" name="M3" step="0.001" value="0.1">
 
         <label for="observaciones">Observaciones:</label>
-        <textarea id="observaciones" name="Observaciones">Fragil</textarea>
+        <textarea id="observaciones" name="Observaciones">Fragil, Unidad enviada por WWW.NOVOGAR.COM.AR, ante cualquier consulta comunicarse a (0341) 156680658</textarea>
 
         <label for="modalidadEntrega">Modalidad de Entrega:</label>
         <select id="modalidadEntrega" required>
@@ -95,7 +95,7 @@
         <label for="unidadVenta">Unidad de Venta:</label>
         <select id="unidadVenta" name="UnidadVenta" required>
             <option value="express rto conformado">PAQUETERIA EXPRESS (-30Kg)</option>
-            <option value="cargas remito conformado">CARGA PESADA (+30Kg)</option>
+            <option value="cargas remito conformado"selected >CARGA PESADA (+30Kg)</option>
         </select>
 
         <label for="esFletePagoDestino"></label>
