--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <label for="nombreApellidoDestinatario">Nombre y Apellido Destinatario:</label>
             <input type="text" id="nombreApellidoDestinatario" name="NombreApellidoDestinatario" value="" required>
 
-            <p id="respuesta" class="respuesta2" ></p>
+            <p id="respuesta2"></p>
 
             <label for="codigoPostalDestinatario">Código Postal Destinatario:</label>
             <input type="text" id="codigoPostalDestinatario" name="CodigoPostalDestinatario" value="" required>
