--- a/index.html
+++ b/index.html
@@ -23,9 +23,15 @@
             <input type="text" id="calleRemitente" name="CalleRemitente" value="Mendoza" required>
 
             <input type="text" id="calleNroRemitente" name="CalleNroRemitente" value="2799" required>
-
-            <input type="text" id="codigoPostalRemitente" name="CodigoPostalRemitente" value="2000" required>
-
+            
+            <div class="origenEnvio">
+                <label for="codigoPostalRemitente">Origen: (Disponible origen NQN)</label>
+                <select id="codigoPostalRemitente" name="CodigoPostalRemitente" required>
+                    <option value="2000" selected>Rosario (2000)</option>
+                    <option value="8400">Neuquén (8400)</option>
+                </select>
+            </div>
+            
             <label for="nombreApellidoDestinatario">Nombre y Apellido Destinatario:</label>
             <input type="text" id="nombreApellidoDestinatario" name="NombreApellidoDestinatario" value="" required>
 
