--- a/index.html
+++ b/index.html
@@ -25,10 +25,11 @@
             <input type="text" id="calleNroRemitente" name="CalleNroRemitente" value="2799" required>
             
             <div class="origenEnvio">
-                <label for="codigoPostalRemitente">Origen: (Disponible origen NQN)</label>
+                <label for="codigoPostalRemitente">Origen: (Disponible origen NQN & Cipolletti)</label>
                 <select id="codigoPostalRemitente" name="CodigoPostalRemitente" required>
                     <option value="2000" selected>Rosario (2000)</option>
-                    <option value="8400">Neuquén (8400)</option>
+                    <option value="8300">Neuquén (8300)</option>
+                    <option value="8324">Cipolletti (8324)</option>
                 </select>
             </div>
             
