--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
     </div>
     <ul class="nav-links">
         <li class="nav-item"><a href="#" class="active">Generación de etiqueta</a></li>
-        <li class="nav-item"><a href="#">Cotización de envíos (Proximamente)</a></li>
-        <li class="nav-item"><a href="#">Seguimiento (Proximamente)</a></li>
+        <li class="nav-item"><a href="#">Cotización de envíos (Pronto)</a></li>
+        <li class="nav-item"><a href="#">Seguimiento (Pronto)</a></li>
     </ul>
 </nav>
   
