--- a/index.html
+++ b/index.html
@@ -49,14 +49,37 @@
                 <option value="8324">Cipolletti (8324)</option>
             </select>
         </div>
+
+        <div class="trucks">
+            <div class="truck" id="truckAndesmar">
+                <img src="./Img/AndesmarTruck.png" alt="Truck Andesmar">
+                <div class="label">Andesmar</div>
+            </div>
+            <div class="truck" id="truckAndreani">
+                <img src="./Img/Andreanitruck.png" alt="Truck Andreani">
+                <div class="label">Andreani</div>
+            </div>
+        </div>
         
         <label for="nombreApellidoDestinatario">Nombre y Apellido Destinatario:</label>
         <input type="text" id="nombreApellidoDestinatario" name="NombreApellidoDestinatario" value="" required>
 
         <p id="respuesta2"></p>
 
-        <label for="codigoPostalDestinatario">Código Postal Destinatario:</label>
-        <input type="text" id="codigoPostalDestinatario" name="CodigoPostalDestinatario" value="" required>
+        <div class="CpyLocalidad" style="position: relative;">
+            <div class="cp">
+                <label for="codigoPostalDestinatario">Código Postal Destinatario:</label>
+                <input type="text" id="codigoPostalDestinatario" name="CodigoPostalDestinatario" value="" required>
+            </div>
+    
+            <div class="localidad">
+                <label for="localidad">Localidad (Solo <span class="Andre">Andreani</span>)</label>
+                <input type="text" id="localidad" name="localidad" value="" autocomplete="off">
+                <span class="clear-button" id="clearButton">✖</span>
+                <div class="spinner2" id="loadingSpinner"></div>
+                <div class="lista-localidades" id="listaLocalidades"></div>
+            </div>
+        </div>
 
         <label for="calleDestinatario">Calle Destinatario:</label>
         <input type="text" id="calleDestinatario" name="CalleDestinatario" value="" required>
@@ -195,10 +218,13 @@
         <div class="spinner"></div>
     </div>
 
-    <script src="formulario-andesmar.js"></script>
-    <script src="bultos.js"></script>
+    <script src="./js/formulario-andesmar.js"></script>
+    <script src="./js/bultos.js"></script>
+    <script src="./js/localidades.js"></script>
+    <script src="./js/trucks.js"></script>
+    <script src="./js/script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-    <script src="script.js"></script>
+
 
 </body>
 </html>
