--- a/index.html
+++ b/index.html
@@ -68,12 +68,12 @@
 
         <div class="CpyLocalidad" style="position: relative;">
             <div class="cp">
-                <label for="codigoPostalDestinatario">Código Postal Destinatario:</label>
+                <label for="codigoPostalDestinatario">Código Postal:</label>
                 <input type="text" id="codigoPostalDestinatario" name="CodigoPostalDestinatario" value="" required>
             </div>
     
             <div class="localidad">
-                <label for="localidad">Localidad (Solo <span class="Andre">Andreani</span>)</label>
+                <label for="localidad">Localidad <span class="Andre">Andreani</span></label>
                 <input type="text" id="localidad" name="localidad" value="" autocomplete="off">
                 <span class="clear-button" id="clearButton">✖</span>
                 <div class="spinner2" id="loadingSpinner"></div>
