--- a/index.html
+++ b/index.html
@@ -87,6 +87,16 @@
         <label for="calleNroDestinatario">Número de Calle Destinatario:</label>
         <input type="text" id="calleNroDestinatario" name="CalleNroDestinatario" value="" required>
 
+        <div class="PisoyDepto hidden" style="position: relative;">
+            <div class="piso">
+                <input type="text" id="pisolDestinatario" name="pisolDestinatario" placeholder="Piso (Solo Andreani)" value="" required>
+            </div>
+    
+            <div class="depto">
+                <input type="text" id="deptoDestinatario" name="deptoDestinatario" value="" placeholder="Departamento (Solo Andreani)" autocomplete="off">
+            </div>
+        </div>
+        
         <label for="telefonoDestinatario">Teléfono Destinatario:</label>
         <input type="text" id="telefonoDestinatario" name="TelefonoDestinatario" value="" required>
 
@@ -172,6 +182,10 @@
 
         <div id="volumenVisual">
             <strong>Volumen Total (m³):</strong> <span id="volumenTotal">0.00</span>
+        </div>
+
+        <div id="volumenVisual">
+            <strong>Volumen Total (cm³):</strong> <span id="volumenTotalcm">0.00</span>
         </div>
 
         <input type="number" id="m3" name="M3" step="0.001" value="0.1" style="display:none;">
