--- a/index.html
+++ b/index.html
@@ -19,16 +19,6 @@
 
 </head>
 
-<script>
-    // Verificar si el usuario ha iniciado sesión
-    window.onload = function() {
-        const loggedIn = localStorage.getItem('loggedIn');
-        if (!loggedIn) {
-            window.location.href = 'login.html'; // Redirigir a la página de login
-        }
-    };
-</script>
-
 <nav class="navbar">
     <div class="logo">
         <img src="./Img/Novogar N.png" alt="Logo" class="navbar-logo">
@@ -57,7 +47,7 @@
         <input type="text" id="calleNroRemitente" name="CalleNroRemitente" value="2799" required>
         
         <div class="origenEnvio">
-            <label class="nuevo" for="codigoPostalRemitente">Origen ANDESMAR: (Disponible origen NQN & Cipolletti)</label>
+            <label class="nuevo" for="codigoPostalRemitente">ANDESMAR: (Disponible origen NQN & Cipolletti)</label>
             <select id="codigoPostalRemitente" name="CodigoPostalRemitente" required>
                 <option value="2000" selected>Rosario (2000)</option>
                 <option value="8300">Neuquén (8300)</option>
