--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
 
     <footer class="center">
         <img class="logo-foot" src="./Img/Novogar N.png" alt="Logo Novogar">
-        <a class="www" href="https://novogar.com.ar/" target="_blank" >WWW.NOVOGAR.COM.AR</a>
+        <a class="www" href="https://novogar.com.ar/" target="_blank" >NOVOGAR</a>
         <a href="https://novogar.com.ar/info/empresa" target="_blank" >Quienes somos</a>
         <a href="https://novogar.com.ar/info/Sucursales" target="_blank" >Sucursales</a>
         <a href="https://novogar.com.ar/info/ventaTelefonica" target="_blank" >Atención al cliente</a>
