--- a/index.html
+++ b/index.html
@@ -87,13 +87,18 @@
 
         <input type="text" id="calleNroDestinatario" name="CalleNroDestinatario" value="" required placeholder="Número de Calle Destinatario">
 
+        <h3 class="Andrean hidden">Andreani (Opcional) <i class="fas fa-chevron-down"></i></h3>
         <div class="PisoyDepto hidden" style="position: relative;">
             <div class="piso">
-                <input type="text" id="pisolDestinatario" name="pisolDestinatario" placeholder="Piso (Solo Andreani)" value="" required>
+                <input type="text" id="pisolDestinatario" name="pisolDestinatario" placeholder="Piso" value="" required>
             </div>
     
             <div class="depto">
-                <input type="text" id="deptoDestinatario" name="deptoDestinatario" value="" placeholder="Departamento (Solo Andreani)" autocomplete="off">
+                <input type="text" id="deptoDestinatario" name="deptoDestinatario" value="" placeholder="Depto" autocomplete="off">
+            </div>
+
+            <div class="email">
+                <input type="text" id="emailDestinatario" name="emailDestinatario" value="posventa@novogar.com.ar" placeholder="E-mail" autocomplete="off">
             </div>
         </div>
         
