--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 
 
         <div class="provincia">
-            <p></p>
+            <p id="nombre-provincia"></p>
         </div>
 
         <input type="text" id="calleDestinatario" name="CalleDestinatario" value="" required placeholder="Calle del Destinatario">
@@ -213,6 +213,20 @@
             </div>
         </div>
 
+        <div class="grid-container">
+            <h2 class="titulo-cotizacion">*Precios finales con IVA</h2>
+            <div class="cotizacion-container">
+                <span class="signo-peso"><img src="./Img/dollar.webp" alt="Dollar Sign"></span>
+                <span class="valor-cotizacion" id="valor-cotizacion">0</span>
+                <div class="cotizacion-label">ANDREANI</div>
+            </div>
+            <div class="cotizacion-container">
+                <span class="signo-peso"><img src="./Img/dollar.webp" alt="Dollar Sign"></span>
+                <span class="valor-cotizacion" id="valor-cotizacion2">0</span>
+                <div class="cotizacion-label">ANDESMAR</div>
+            </div>
+        </div>
+        
         <input type="number" id="m3" name="M3" step="0.001" value="0.1" style="display:none;">
 
         <label for="modalidadEntrega">Modalidad de Entrega Andesmar:</label>
@@ -328,16 +342,15 @@
     </div>
 
     <script src="./js/formulario-andesmar.js"></script>
-    <script src="./js/firebaseHandler.js"></script>
+    <script src="./js/cotizadorAndreani.js" defer></script>
     <script src="./js/bultos.js"></script>
+    <script src="./js/cotizadorAndesmar.js"></script>
     <script src="./js/localidades.js"></script>
     <script src="./js/trucks.js"></script>
     <script src="./js/script.js"></script>
     <script src="./js/andreani.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.3.1/js/bootstrap.min.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/9.2.0/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/9.2.0/firebase-database.js"></script>   
 
     <footer class="center">
         <img class="logo-foot" src="./Img/Novogar N.png" alt="Logo Novogar">
