--- a/index.html
+++ b/index.html
@@ -266,8 +266,8 @@
 </button>
 
 <!-- Botón para desplegar los botones ocultos -->
-<button class="btn btn-secondary" type="button" data-bs-toggle="collapse" data-bs-target="#etiquetasCollapse" aria-expanded="false" aria-controls="etiquetasCollapse">
-    <i class="bi bi-chevron-down"></i> Mostrar opciones individuales
+<button id="btn-secondary-collapse" class="btn btn-secondary" type="button" data-bs-toggle="collapse" data-bs-target="#etiquetasCollapse" aria-expanded="false" aria-controls="etiquetasCollapse">
+    <i class="bi bi-chevron-down"></i> Opciones individuales
 </button>
 
 <!-- Contenedor colapsable con los dos botones ocultos -->
