--- a/meli.html
+++ b/meli.html
@@ -73,7 +73,7 @@
                         <div class="col-md-4">
                             <div class="card">
                                 <div class="card-body">
-                                    <h5 class="card-title"><i class="fas fa-user"></i> RUBEN DIEGO DANIEL AVALOS</h5>
+                                    <h5 class="card-title"><i class="fas fa-user"></i> RUBEN DANIEL AVALOS</h5>
                                     <div class="d-flex align-items-center">
                                         <p class="remitoCardMeli card-text mb-0">2000009265004936</p>
                                         <button class="btn btn-link btn-sm text-decoration-none copy-btn ms-2" style="color: #007bff;">
