--- a/meli.html
+++ b/meli.html
@@ -103,7 +103,17 @@
                                 <p><i class="bi bi-sticky-fill"></i> Observaciones: Casa de portón negro</p>
                                 <p><i class="bi bi-info-circle-fill"></i> Recibe: María Luisa Ramos</p>
                             </div>
+
+                            <div class="dimensions-info">
+                                <h6>Dimenciones</h6>
+                                <div><i class="bi bi-arrows-angle-expand"></i> 30x20x10 cm</div>
+                                <div><i class="bi bi-box-arrow-in-down"></i> Peso: 1.5 kg</div>
+                                <div><i class="bi bi-box"></i> Volumen M³: 6000 cm³</div>
+                                <div><i class="bi bi-box"></i> Volumen CM³: 0.6 cm³</div>
+                                <div><i class="bi bi-boxes"></i> Cantidad: 2</div>
+                            </div>
                         </div>
+                        
                         <!-- FIN DEL COLLAPSE -->
         
                         <a href="" target="_blank" class="btn btn-primary"><i class="bi bi-file-earmark-arrow-down-fill"></i> Andesmar</a>
@@ -144,6 +154,14 @@
                                 <p><i class="bi bi-envelope-at-fill"></i> Email: anagomez@gmail.com</p>
                                 <p><i class="bi bi-sticky-fill"></i> Observaciones: Entregar en la puerta</p>
                                 <p><i class="bi bi-info-circle-fill"></i> Recibe: Pedro Pérez</p>
+                            </div>
+                            <div class="dimensions-info">
+                                <h6>Dimenciones</h6>
+                                <div><i class="bi bi-arrows-angle-expand"></i> 30x20x10 cm</div>
+                                <div><i class="bi bi-box-arrow-in-down"></i> Peso: 1.5 kg</div>
+                                <div><i class="bi bi-box"></i> Volumen M³: 6000 cm³</div>
+                                <div><i class="bi bi-box"></i> Volumen CM³: 0.6 cm³</div>
+                                <div><i class="bi bi-boxes"></i> Cantidad: 2</div>
                             </div>
                         </div>
                         <!-- FIN DEL COLLAPSE -->
@@ -186,6 +204,14 @@
                                 <p><i class="bi bi-envelope-at-fill"></i> Email: carloslopez@gmail.com</p>
                                 <p><i class="bi bi-sticky-fill"></i> Observaciones: Llamar al llegar</p>
                                 <p><i class="bi bi-info-circle-fill"></i> Recibe: Laura López</p>
+                            </div>
+                            <div class="dimensions-info">
+                                <h6>Dimenciones</h6>
+                                <div><i class="bi bi-arrows-angle-expand"></i> 30x20x10 cm</div>
+                                <div><i class="bi bi-box-arrow-in-down"></i> Peso: 1.5 kg</div>
+                                <div><i class="bi bi-box"></i> Volumen M³: 6000 cm³</div>
+                                <div><i class="bi bi-box"></i> Volumen CM³: 0.6 cm³</div>
+                                <div><i class="bi bi-boxes"></i> Cantidad: 2</div>
                             </div>
                         </div>
                         <!-- FIN DEL COLLAPSE -->
