--- a/index.html
+++ b/index.html
@@ -342,6 +342,11 @@
     <div id="spinner" class="spinner-container" style="display:none;">
         <div class="spinner"></div>
     </div>
+
+    <!-- Botón de flecha hacia arriba -->
+    <a href="#" id="scrollToTop" class="btn btn-warning" style="display: none;">
+    <i class="fas fa-arrow-up"></i>
+    </a>
     
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
@@ -354,6 +359,7 @@
     <script src="./js/trucks.js"></script>
     <script src="./js/script.js"></script>
     <script src="./js/andreani.js"></script>
+    <script src="./js/features.js"></script>
 
     <!-- Scripts Bootstrap-->
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.3.1/js/bootstrap.min.js"></script>
