--- a/meli.html
+++ b/meli.html
@@ -228,6 +228,11 @@
         </nav>
     </div>
 
+    <!-- Botón de flecha hacia arriba -->
+        <a href="#" id="scrollToTop" class="btn btn-warning" style="display: none;">
+            <i class="fas fa-arrow-up"></i>
+            </a>
+
     <footer class="center">
         <img class="logo-foot" src="./Img/Novogar N.png" alt="Logo Novogar">
         <a class="www" href="https://novogar.com.ar/" target="_blank">NOVOGAR</a>
@@ -245,6 +250,7 @@
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.bundle.min.js"></script>
     <script src="./js/enviosCards.js"></script>
+    <script src="./js/features.js"></script>
 
 </body>
 </html>
