--- a/index.html
+++ b/index.html
@@ -132,6 +132,13 @@
             <option value="split5500">Split 5500W</option>
             <option value="split6000">Split 6000W</option>
             <option value="pisoTecho18000">Piso Techo 18000 Frigorías</option>
+            <option value="aireportatil">Aire Portatil</option>
+            <option value="ventiladordepared">Ventilador de Pared</option>
+            <option value="colchon80cm">Colchon 80cm</option>
+            <option value="colchon100cm">Colchon 100cm</option>
+            <option value="colchon140cm">Colchon 140cm</option>
+            <option value="colchon160cm">Colchon 160cm</option>
+            <option value="colchon200cm">Colchon 200cm</option>
             <option value="termotanque50">Termotanque 50L</option>
             <option value="termotanque80">Termotanque 80L</option>
             <option value="termotanque110">Termotanque 110L</option>
