--- a/index.html
+++ b/index.html
@@ -3,9 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Andesmar API Etiquetas</title>
-
-    <title>Andesmar API Etiquetas</title>
+    <title>API Etiquetas</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.10.5/font/bootstrap-icons.min.css" rel="stylesheet">
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet">
@@ -23,7 +21,6 @@
 
     <!-- Estilos personalizados -->
     <link rel="stylesheet" href="styles.css">
-    <link rel="shortcut icon" href="./Img/Andesmar Fav.jpg">
 </head>
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
