--- a/meli.html
+++ b/meli.html
@@ -60,8 +60,8 @@
                     <option value="antiguo">Más antiguos</option>
                 </select>
                 <div class="trio-de-botones">
-                    <button class="btn btn-danger">Andreani</button>
-                    <button class="btn btn-primary">Andesmar</button>
+                    <button class="btn btn-danger"><i class="bi bi-box-seam-fill"></i></button>
+                    <button class="btn btn-primary"><i class="bi bi-box-seam-fill"></i></button>
                     <button class="btn btn-secondary">Pendientes</button>
                 </div>
                 
