--- a/meli.html
+++ b/meli.html
@@ -107,6 +107,8 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.bundle.min.js"></script>
     <script src="./js/features.js"></script>
     <script src="./js/meliCardsFisebase.js"></script>
+    <script src="./js/ciudades.js"></script>
+    
 
 </body>
 
