--- a/envios.html
+++ b/envios.html
@@ -50,8 +50,8 @@
             <div class="col-md-3 mb-3 d-flex align-items-center">
                 <!-- Filtro -->
                 <select class="custom-select" id="filter" style="flex: 1; margin-right: 10px;">
-                    <option value="nuevo" selected><i class="fas fa-sort-amount-down-alt"></i> Más nuevos</option>
-                    <option value="antiguo"><i class="fas fa-sort-amount-up-alt"></i> Más antiguos</option>
+                    <option value="nuevo" selected>Más nuevos</option>
+                    <option value="antiguo">Más antiguos</option>
                 </select>
                 <button class="btn btn-secondary simbel" id="filter-labels">Etiquetas <img id="simbel" src="./Img/simbel.png"></button>
             </div>
