--- a/envios.html
+++ b/envios.html
@@ -63,7 +63,27 @@
             <span class="sr-only">Cargando...</span>
         </div>
 
-        <div class="row" id="envios-cards"></div>
+<!-- Modal -->
+<div class="modal fade" id="trackingModal" tabindex="-1" aria-labelledby="trackingModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="trackingModalLabel">Seguimiento de Pedido</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body d-flex justify-content-center align-items-center" style="height: auto;">
+                <div id="trackingContent">
+                    <!-- Aca van los datos Carcados -->
+                </div>
+            </div>
+        </div>
+    </div>
+</div> 
+<!-- Fin Modal -->
+
+        <div class="row" id="envios-cards">
+
+        </div>
         <nav aria-label="Page navigation">
             <ul class="pagination justify-content-center" id="pagination"></ul>
         </nav>
