--- a/index.html
+++ b/index.html
@@ -141,6 +141,8 @@
             <option value="termotanque110">Termotanque 110L</option>
             <option value="termotanque150">Termotanque 150L</option>
             <option value="termotanque180">Termotanque 180L</option>
+            <option value="termotanque255">Termotanque 255L COM255</option>
+            <option value="termotanque300">Termotanque 300L RHCTP300N</option>
             <option value="smartTV32">Smart TV 32"</option>
             <option value="smartTV40">Smart TV 40"</option>
             <option value="smartTV43">Smart TV 43"</option>
