--- a/bna.html
+++ b/bna.html
@@ -25,7 +25,9 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item"><a href="./index.html" class="nav-link">Generación de etiqueta</a></li>
-                    <li class="nav-item"><a href="./envios.html" class="nav-link active">Seguimiento de Envios</a></li>
+                    <li class="nav-item"><a href="./envios.html" class="nav-link">Seguimiento de Envios</a></li>
+                    <li class="nav-item"><a href="./meli.html" class="nav-link"><img id="meli-logo" src="./Img/meli.png">Envios Mercado Libre</a></li>
+                    <li class="nav-item"><a href="./bna.html" class="nav-link active">Envios <img id="meli-logo" src="./Img/bna-logo.png" alt="BNA Logo" /></a></li>
                 </ul>
             </div>
         </div>
