--- a/meli.html
+++ b/meli.html
@@ -34,7 +34,8 @@
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item"><a href="./index.html" class="nav-link">Generación de etiqueta</a></li>
                     <li class="nav-item"><a href="./envios.html" class="nav-link">Seguimiento de Envios</a></li>
-                    <li class="nav-item"><a href="./envios.html" class="nav-link active"><img id="meli-logo" src="./Img/meli.png">Envios Mercado Libre</a></li>
+                    <li class="nav-item"><a href="./meli.html" class="nav-link active"><img id="meli-logo" src="./Img/meli.png">Envios Mercado Libre</a></li>
+                    <li class="nav-item"><a href="./bna.html" class="nav-link">Envios <img id="meli-logo" src="./Img/bna-logo.png" alt="BNA Logo" /></a></li>
                 </ul>
             </div>
         </div>
