--- a/bna.html
+++ b/bna.html
@@ -120,6 +120,7 @@
     <!-- SweetAlert JS -->
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="./js/bnaCards.js"></script>
+    <script src="./js/features.js"></script>
 
 </body>
 </html>
