--- a/meliAr.html
+++ b/meliAr.html
@@ -79,6 +79,10 @@
                 <!-- Cards Importadas de Firebase -->
             </div>
 
+            <nav aria-label="Page navigation"></nav>
+            <ul class="pagination justify-content-center" id="pagination"></ul>
+            </nav>
+
         </div>
     
             <!-- Botón de flecha hacia arriba -->
