--- a/bna.html
+++ b/bna.html
@@ -80,10 +80,10 @@
             <div class="row justify-content-center">
                 <div class="col-lg-6 col-md-8 col-sm-12">
                     <div class="input-group">
-                        <input type="file" id="fileInput" accept=".txt" class="form-control">
+                        <input type="file" id="fileInput" accept=".csv" class="form-control">
                         <div class="input-group-append">
                             <button id="importButton" class="btn btn-primary">
-                                <i class="bi bi-filetype-txt"></i> Importar
+                                <i class="bi bi-filetype-csv"></i> Importar
                             </button>
                         </div>
                     </div>
