--- a/envios.html
+++ b/envios.html
@@ -29,6 +29,7 @@
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item"><a href="./index.html" class="nav-link">Generación de etiqueta</a></li>
                     <li class="nav-item"><a href="./envios.html" class="nav-link active">Seguimiento de Envios</a></li>
+                    <li class="nav-item"><a href="./bna.html" class="nav-link">Envios <img id="meli-logo" src="./Img/bna-logo.png" alt="BNA Logo" /></a></li>
                 </ul>
             </div>
         </div>
