--- a/bna.html
+++ b/bna.html
@@ -136,6 +136,8 @@
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="./js/bnaCards.js"></script>
     <script src="./js/features.js"></script>
+    <script src="js/ciudades.js"></script>
+
 
 </body>
 </html>
