--- a/bna.html
+++ b/bna.html
@@ -65,6 +65,10 @@
                         </span>
                     </button>
 
+                    <button id="btnSwitch" type="button" class="btn btn-success position-relative" style="white-space: nowrap">
+                        Sin Entregar <i class="bi bi-toggle-off"></i>
+                    </button>
+
                  </div>
 
                 
