--- a/bna.html
+++ b/bna.html
@@ -66,7 +66,7 @@
                     </button>
 
                     <button id="btnSwitch" type="button" class="btn btn-success position-relative" style="white-space: nowrap">
-                        Entregas <i class="bi bi-toggle-off"></i>
+                        <i class="bi bi-toggle-off"></i>
                     </button>
 
                  </div>
