--- a/mailup.html
+++ b/mailup.html
@@ -3,65 +3,82 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Enviar Email de Prueba</title>
+    <title>Enviar Email con MailUp</title>
+</head>
+<body>
+    <h1>Enviar Email</h1>
+    <button id="sendEmailButton">Enviar Email</button>
+
     <script>
-        async function obtenerToken() {
-            const response = await fetch('https://proxy.cors.sh/https://api.mailup.com/API/v1.1/Authentication/AccessToken', {
-                method: 'POST',
-                headers: {
-                    'Content-Type': 'application/json',
-                    'x-cors-api-key': 'live_36d58f4c13cb7d838833506e8f6450623bf2605859ac089fa008cfeddd29d8dd'
-                },
-                body: JSON.stringify({
-                    "ClientId": "168ac4cb-e699-465d-8808-24e215307ebe",
-                    "ClientSecret": "437fcac2-58f7-43c4-b6e7-cdd7ad2ad26a"
-                })
-            });
-
-            if (response.ok) {
-                const data = await response.json();
-                return data.access_token;
-            } else {
-                const errorText = await response.text();
-                console.error('Error al obtener el token:', errorText);
-                throw new Error('Error al obtener el token de acceso');
-            }
-        }
-
-        async function enviarEmail() {
+        document.getElementById('sendEmailButton').addEventListener('click', async () => {
             try {
-                const token = await obtenerToken();
-                const response = await fetch('https://proxy.cors.sh/https://api.mailup.com/API/v1.1/SendEmail', {
+                // Obtener el token
+                const tokenResponse = await fetch('https://services.mailup.com/Authorization/OAuth/Token', {
                     method: 'POST',
                     headers: {
-                        'Content-Type': 'application/json',
-                        'Authorization': 'Bearer ' + token,
-                        'x-cors-api-key': 'live_36d58f4c13cb7d838833506e8f6450623bf2605859ac089fa008cfeddd29d8dd'
+                        'Authorization': 'Basic ' + btoa('168ac4cb-e699-465d-8808-24e215307ebe:437fcac2-58f7-43c4-b6e7-cdd7ad2ad26a'),
+                        'Content-Type': 'application/x-www-form-urlencoded'
                     },
-                    body: JSON.stringify({
-                        "From": "posventa@novogar.com.ar",
-                        "To": ["lucasponzoni@gmail.com"],
-                        "Subject": "Email de Prueba",
-                        "Body": "Este es un correo de prueba enviado desde MailUp."
+                    body: new URLSearchParams({
+                        'grant_type': 'password',
+                        'username': 'm154745',
+                        'password': '2799Mendoza'
                     })
                 });
 
-                if (response.ok) {
-                    alert('Email enviado con éxito!');
+                if (!tokenResponse.ok) {
+                    throw new Error('Error al obtener el token: ' + tokenResponse.statusText);
+                }
+
+                const tokenData = await tokenResponse.json();
+                const accessToken = tokenData.access_token;
+
+                // Mostrar el token en consola
+                console.log('Token de acceso:', accessToken);
+
+                // Crear el mensaje
+                const createMessageResponse = await fetch(`https://services.mailup.com/API/v1.1/Rest/ConsoleService.svc/Console/List/C4BCD75F-1EC5-4AF1-9449-6E077892E424/Email`, {
+                    method: 'POST',
+                    headers: {
+                        'Authorization': 'Bearer ' + accessToken,
+                        'Content-Type': 'application/json'
+                    },
+                    body: JSON.stringify({
+                        "Subject": "Asunto del Email",
+                        "Body": "Este es el contenido del email.",
+                        "SenderName": "NOVOGAR TEST",
+                        "SenderAddress": "info@novogar.com.ar",
+                        "ListId": "4C3720A1-FF8C-4D51-BDFE-75ACEADFC719" // Reemplaza con tu GUID
+                    })
+                });
+
+                if (!createMessageResponse.ok) {
+                    throw new Error('Error al crear el mensaje: ' + createMessageResponse.statusText);
+                }
+
+                const messageData = await createMessageResponse.json();
+                const messageId = messageData.idMessage; // Asegúrate de usar el campo correcto
+
+                // Enviar el email
+                const emailResponse = await fetch(`https://services.mailup.com/API/v1.1/Rest/ConsoleService.svc/Console/List/C4BCD75F-1EC5-4AF1-9449-6E077892E424/Email/${messageId}/Send`, {
+                    method: 'POST',
+                    headers: {
+                        'Authorization': 'Bearer ' + accessToken,
+                        'Content-Type': 'application/json'
+                    }
+                });
+
+                if (emailResponse.ok) {
+                    alert('Email enviado exitosamente');
                 } else {
-                    const errorData = await response.text();
-                    console.error('Error al enviar el email:', errorData);
-                    alert('Error al enviar el email: ' + errorData);
+                    const errorData = await emailResponse.json();
+                    alert('Error al enviar el email: ' + errorData.message);
                 }
             } catch (error) {
-                console.error('Error:', error.message);
-                alert('Error: ' + error.message);
+                console.error('Error:', error);
+                alert('Ocurrió un error al enviar el email: ' + error.message);
             }
-        }
+        });
     </script>
-</head>
-<body>
-    <h1>Enviar Email de Prueba</h1>
-    <button onclick="enviarEmail()">Enviar Email</button>
 </body>
 </html>
